Added sync artisan command route
